# dora-code

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.txt  CONTRIBUTING.md  DESIGN.md  DORAEMON.md  Dockerfile  GEMINI.md  NEXT_STEPS.md  PROGRESS_DASHBOARD.md  README.md  TEST_COVERAGE_REPORT.md  coverage.json  pyproject.toml  todo.md
.doraemon/: STYLE.md  config.json  tasks.json
.doraemon/chroma_db/: chroma.sqlite3
.doraemon/conversations/: default.json
.doraemon/usage/: 2026-01-27.json
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
.polymath/: config.json  hooks.json.example
benchmarks/: real_repo_tasks.json
benchmarks/samples/: humaneval_plus_sample.json  repo_patch_sample.json  terminal_bench_sample.json
docs/: EVALUATION_IMPROVEMENT_PLAN.md  SIMPLIFICATION.md  api.md  architecture.md  development.md
examples/: model_client_usage.py
polymath.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_benchmark.py  run_evals.py  setup.sh
src/: __init__.py  agent.py  cli.py
src/agent/: __init__.py  adapter.py  base.py  doraemon.py  react.py  state.py  types.py
src/core/: __init__.py  agent_loop.py  async_files.py  auto_test_fix.py  background_tasks.py  browser.py  cache.py  checkpoint.py  codebase_map.py  command_history.py  commands.py  config.py  configuration.py  container.py  context_manager.py  cost_tracker.py  diff.py  doctor.py  errors.py  events.py  file_watcher.py  git_hooks.py  home.py  hooks.py  (+42 more)
tests/: conftest.py  test_office.py
webui/: index.html  package.json
(+201 files in other folders)
