[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymath"
version = "0.2.0"
description = "An extensible AI Polymath powered by MCP architecture."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-generativeai>=0.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "duckduckgo-search>=6.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[project.scripts]
scribe = "src.host.cli:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
